--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   </head>
 
   <body>
-    <div class="login-container"></div>
+    <div class="login-container">
+      <button id="login-button">Log in w/ Spotify</button>
+    </div>
   </body>
 </html>
